# myagent

./: .env.example  .gitignore  .oldenv  CHANGELOG.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml
config/prompts/: chat_context.md  daily_report.md  knowledge_extraction.md  system.md
docs/: API.md  BASE_URL_CONFIG.md  DAILY_REPORT_EXAMPLE.md  GETTING_STARTED.md  LEARNING_OPTIMIZATION.md  MODELS.md  OFFLINE_MODE.md  自适应Agent的边界-基于PyAgent项目的实践观察.md
examples/: __init__.py  knowledge_search.py  learn_and_report.py  simple_chat.py
src/: __init__.py  main.py
src/cli/: __init__.py  commands.py  interactive.py
src/core/: agent.py  config.py  daemon.py
src/daily/: __init__.py  report.py  skills.py
src/evolution/: engine.py
src/feedback/: collector.py
src/improvement/: engine.py
src/knowledge/: __init__.py  base.py  file_store.py  hybrid_store.py  retrieval.py  vector_store.py
src/learning/: __init__.py  engine.py  extractor.py  parser.py  scheduler.py  searcher.py
src/models/: __init__.py  base.py  claude.py  deepseek.py  embedding.py  factory.py  glm.py  kimi.py  local.py  openai.py  qwen.py
src/skills/: application.py
tests/: differential_test.py  test_integration.py  test_knowledge.py  test_models.py
tests/fixtures/: learning_fixtures.py
