[project]
name = "myagent"
version = "0.1.0"
description = "自进化Python专家Agent"
requires-python = ">=3.11"
authors = [
    {name = "PyAgent Team"}
]
readme = "README.md"

dependencies = [
    # LLM SDKs
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "zhipuai>=2.0.0",

    # 向量数据库
    "chromadb>=0.4.0",
    "sentence-transformers",

    # Web抓取
    "beautifulsoup4",
    "requests",
    "aiohttp",
    "feedparser",
    "markdownify",

    # CLI
    "rich>=13.0.0",
    "click>=8.0.0",
    "prompt_toolkit",
    "loguru>=0.7.0",

    # 配置
    "pyyaml",
    "python-dotenv",

    # 调度
    "schedule",
    "apscheduler",

    # Git
    "gitpython>=3.1.0",

    # 工具
    "python-dateutil",
    "toml",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio",
    "black",
    "ruff",
    "mypy",
]

[project.scripts]
myagent = "src.main:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "B"]
